--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="grid-item">
         <div class="card">
           <div class="image-container">
-            <img src="images/web.png" alt="" />
+            <img src="web.png" alt="" />
           </div>
           <div class="card-content">
             <h3>Web Dev</h3>
@@ -44,7 +44,7 @@
       <div class="grid-item">
         <div class="card">
           <div class="image-container">
-            <img src="images/uiux.png" alt="" />
+            <img src="uiux.png" alt="" />
           </div>
           <div class="card-content">
             <h3>UI/UX Design</h3>
@@ -59,7 +59,7 @@
       <div class="grid-item">
         <div class="card">
           <div class="image-container">
-            <img src="images/mobile.png" alt="" />
+            <img src="mobile.png" alt="" />
           </div>
           <div class="card-content">
             <h3>App Dev</h3>
